trying to fix nav button to left on stretched window

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -25,6 +25,7 @@
 }
 
 .site-nav {
+  position: absolute;
   float: right;
   line-height: $base-line-height * $base-font-size * 2.25;
 
